istio-service-mesh/security/reviews-authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: reviews-from-productpage
  namespace: default

spec:
  selector:
    matchLabels:
      app: reviews

  action: ALLOW

  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/bookinfo-productpage

    to:
    - operation:
        methods:
        - GET
